// Copyright (c) 2021, Odroe Inc. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package com.socfony;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AccessTokenService {
    rpc Create(AccessTokenCreateRequest) returns (AccessToken);
    rpc Refresh(google.protobuf.Empty) returns (AccessToken);
    rpc Revoke(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message AccessTokenCreateRequest {
    string phone = 1;
    string otp = 2;
}

message AccessToken {
    string token = 1;
    string user_id = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp expired_at = 4;
    google.protobuf.Timestamp refresh_expired_at = 5;
}
